--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@feathersjs/express": "^4.5.11",
     "@feathersjs/feathers": "^4.5.11",
     "@feathersjs/socketio": "^4.5.11",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express-session": "^1.17.1",
     "feathers-mongoose": "^8.3.1",
+    "helmet": "^4.4.1",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
