--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Technologies - Vanilla JS - Node - MongoDB",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
