--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@feathersjs/socketio": "^4.5.11",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express-http-proxy": "^1.6.2",
     "express-session": "^1.17.1",
     "feathers-mongoose": "^8.3.1",
     "helmet": "^4.4.1",
+    "http-proxy-middleware": "^1.0.6",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
